﻿1.0.7
=====

New Features:

  * None.

Bugfixes:

  * The "Regenerate topic metadata" task should continue even if a single topic
    update fails.  Reported by brian.
  * Fix a potential XSS vulnerability with the Special:Search page.  Reported
    by Brian Clark.

Translation Updates:

  * None.


1.0.6
=====

New Features:

  * None.

Bugfixes:

  * Fix a corner case with the shared image repository where a file could fail
    to load if it is in a shared repository but a virtual-wiki image
    description page (with no associated file) has also been created.
  * Fix a potential XSS issue that could affect some Special: pages.  Reported
    by an anonymous user.
  * When handling whitespace the parser should treat spaces and tabs equally.

Translation Updates:

  * None.


1.0.5
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix an issue that broke the TOC for some browsers when using non-Latin
    characters.  Reported by by Felipe Avilis.
  * Fix an issue where parsing multiple pages at the same time could generate
    parser errors due to shared resource conflicts.

Translation Updates:

  * None.


1.0.4
=====

New Features:

  * None.

Bugfixes:

  * Fix a template parser issue when parsing content of the form
    "{{{{PAGENAME}}/info}}".  Reported by Felipe Avilis.
  * PDFs and other non-image files in the "Image:" namespace were not appearing
    on Special:AllPages.  Reported by Felipe Avilis.

Translation Updates:

  * Updated Polish translations (dlpa).


1.0.3
=====

New Features:

  * None.

Bugfixes:

  * Fix an XSS vulnerability with the search results page (Maxim Valyanskiy).
  * Fix an XSS vulnerability with the user contributions page (Maxim
    Valyanskiy).

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).


1.0.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix MS SQL errors on the Special:ImageList and similar pages.  Fix provided