@@ -8,9 +8,11 @@ New Features:
 Bugfixes:
 
   * The "Regenerate topic metadata" task should continue even if a single topic
-    update fails.  Reported by brian.
+    update fails.  Reported by Brian Clark.
   * Fix a potential XSS vulnerability with the Special:Search page.  Reported
     by Brian Clark.
+  * Fix a potential redirection vulnerability with the Special:Login page.
+    Reported by Brian Clark.
 
 Translation Updates:
 
